force-app/main/default/objects/Contact/fields/FeedbackTreinamento__c.field-meta.xml
<CustomField>
    <fullName>FeedbackTreinamento__c</fullName>
    <description>Campo para armazenar todas as informações relevante do treinamento do possível herói.</description>
    <inlineHelpText>Informe as informações relevante do treinamento do possível herói.</inlineHelpText>
    <label>Feedback Treinamento</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>