force-app/main/default/objects/Contact/fields/isTerraquio__c.field-meta.xml
<CustomField>
    <fullName>isTerraquio__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Informa se o possível herói é do planeta terra.</description>
    <inlineHelpText>Marque se é nativo do planeta terra.</inlineHelpText>
    <label>É terráqueo ?</label>
    <type>Checkbox</type>
</CustomField>