force-app/main/default/objects/Contact/fields/NivelHerio__c.field-meta.xml
<CustomField>
    <fullName>NivelHerio__c</fullName>
    <description>Nível de senioridade do herói.</description>
    <inlineHelpText>Nível de senioridade do herói.</inlineHelpText>
    <label>Nível do Heriói</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aspira</fullName>
            </value>
            <value>
                <fullName>Junior</fullName>
            </value>
            <value>
                <fullName>Pleno</fullName>
            </value>
            <value>
                <fullName>Sênior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>