force-app/main/default/objects/Contact/fields/NomeGuerra__c.field-meta.xml
<CustomField>
    <fullName>NomeGuerra__c</fullName>
    <description>Nome  do herói ou nome do vilão.</description>
    <externalId>true</externalId>
    <inlineHelpText>Nome  do herói ou nome do vilão.</inlineHelpText>
    <label>Nome de Guerra</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>