force-app/main/default/objects/Contact/fields/NumeroBatalhas__c.field-meta.xml
<CustomField>
    <fullName>NumeroBatalhas__c</fullName>
    <description>Quantidade de Batalhas enfrentada pelo Herói.</description>
    <inlineHelpText>Quantidade de Batalhas enfrentada pelo Herói.</inlineHelpText>
    <label>Numero de Batalhas</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>