force-app/main/default/objects/Contact/fields/Planeta__c.field-meta.xml
<CustomField>
    <fullName>Planeta__c</fullName>
    <description>Planeta de origem do candidato.</description>
    <inlineHelpText>Este campo deve ser preenchido sempre quando a opção &quot;É terráqueo&quot; estiver desmarcada. Caso contrário não é obrigatório.</inlineHelpText>
    <label>Planeta</label>
    <length>60</length>
    <type>Text</type>
</CustomField>