force-app/main/default/objects/Contact/fields/Status_Candidato__c.field-meta.xml
<CustomField>
    <fullName>Status_Candidato__c</fullName>
    <description>Informa se o contato esta apto ou não para o treinamento.</description>
    <inlineHelpText>Informa se o contato esta apto ou não para o treinamento.</inlineHelpText>
    <label>Status Candidato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Em Análise</fullName>
                <default>true</default>
                <label>Em Análise</label>
            </value>
            <value>
                <fullName>Reprovado na Análise</fullName>
            </value>
            <value>
                <fullName>Aguardando aprovação para o Treinamento</fullName>
            </value>
            <value>
                <fullName>Reprovado na Análise do Gestor</fullName>
            </value>
            <value>
                <fullName>Em Treinamento</fullName>
            </value>
            <value>
                <fullName>Reprovado no Treinamento</fullName>
                <label>Reprovando no Treinamento</label>
            </value>
            <value>
                <fullName>Aprovado no Treinamento</fullName>
            </value>
            <value>
                <fullName>Aprovado Direto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>